# rag-app

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  api.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
backend/: auth.py  constants.py  data_models.py  document_service.py  rag.py
data/: nvidia_10k_2024.txt
frontend/: app.py
knowledge_base/articles.lance/_transactions/: 0-a016b8b5-e7c8-4504-abc2-7451dba4c566.txn  1-00fe8965-63f5-49dd-8fc9-b081840f35b0.txn  2-7b6c5007-237e-4798-b0cb-6c17af03b769.txn  3-cd167685-9471-4807-8dfc-37c46b2b36d7.txn  4-e26da8d6-1443-4306-b6a5-092f0ec1f096.txn  5-a084f33b-00e2-4b92-829c-5b215fa716b5.txn
knowledge_base/articles.lance/_versions/: 1.manifest  2.manifest  3.manifest  4.manifest  5.manifest  6.manifest
